fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -508,10 +508,8 @@ footer,
 
 .testimoni2-container {
 	background-color: #f8f8f8;
-	height: 25rem;
 	padding-top: 5rem;
 	padding-bottom: 5rem;
-	margin-bottom: 5rem;
 }
 
 .tittle-test {
@@ -534,7 +532,6 @@ p {
 
 .partner-container {
 	background-color: #f8f8f8;
-	height: 20rem;
 	padding-top: 5rem;
 	margin-bottom: 5rem;
 }
